<resources>
    <string name="app_name">RevUp</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_event">Events</string>
    <string name="bottom_menu_search">Search</string>
    <string name="bottom_menu_chats">Chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addPostActivity_hint_title">Title</string>
    <string name="addPostActivity_hint_description">Description</string>
    <string name="addTextPostActivity_posttype">Text Post</string>
    <string name="addImagePostActivity_posttype">Image Post</string>
    <string name="addPostActivity_hint_address">Address [Optional]</string>
    <string name="addPostActivity_btnImage">Upload Image</string>
    <string name="addRoutePostActivity_posttype">Route Post</string>
    <string name="addRoutePostActivity_route">Select the route</string>
    <string name="addPostActivity_deleteImage">Click to delete</string>
    <string name="google_maps_key">AIzaSyDS2-Zq8iF077PS8WA1t2PpVX2XLp0NeYY</string>
    <string name="title_list_routes">Your Routes</string>
    <string name="title_list_events_current">Current Events</string>
    <string name="title_list_events_past">Past Events</string>
    <string name="post_details_header">Post</string>
    <string name="memberSearchFragment_memberName">Member</string>
    <string name="memberSearchFragment_carName">Car</string>
    <string name="clubDetailsActivity_membersTitle">Club members</string>
    <string name="clubDetailsActivity_memberClubRelation">Join in</string>
    <string name="memberDetailsActivity_memberRelation">Follow up</string>
    <string name="memberDetailsActivity_memberCars">Own cars</string>
    <string name="memberDetailsPostsActivity_memberPosts">Own Posts</string>
    <string name="addEventActivity_addType">New Event</string>
    <string name="addEventActivity_hint_name">Name</string>
    <string name="addEventActivity_hint_startDate">Start date</string>
    <string name="addEventActivity_hint_endDate">End date [Optional]</string>
    <string name="addEventActivity_hint_description">Description</string>
    <string name="addEventActivity_hint_location">Select event location</string>
    <string name="memberDetailsActivity_back_button_text">Member</string>
    <string name="clubDetailsActivity_back_button_text">Club</string>
    <string name="carDetailsActivity_edit">Edit Car</string>
    <string name="carDetailsActivity_back_button_text">Car</string>
    <string name="carDetailsActivity_hint_brand">Brand</string>
    <string name="carDetailsActivity_hint_model">Model</string>
    <string name="carDetailsActivity_hint_year">Year</string>
    <string name="carDetailsActivity_hint_power">Horse power</string>
    <string name="carDetailsActivity_hint_descript">Description</string>
    <string name="memberDetailsActivity_logOut">Log out</string>
    <string name="map_style">Map style</string>
    <string name="editMemberActivity_back_button_text">Profile</string>
    <string name="editMemberActivity_edit">Save profile</string>
    <string name="editMemberActivity_hint_memberName">Member Name (username)</string>
    <string name="editMemberActivity_hint_email">Email</string>
    <string name="editMemberActivity_hint_gender">Gender</string>
    <string name="editMemberActivity_hint_location">Location</string>
    <string name="editMemberActivity_hint_dateOfBirth">Date of birth</string>
    <string name="editMemberActivity_hint_name">Name (Full Name)</string>
    <string name="editClubActivity_back_button_text">Club</string>
    <string name="editClubActivity_edit">Save club</string>
    <string name="editClubActivity_hint_name">Name</string>
    <string name="editClubActivity_hint_description">Description</string>
    <string name="addImagePostActivity_hint_location">Location [Optional]</string>
    <string name="address">Address</string>
    <string name="route_start_date">Route Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="state">Event State</string>
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="set_location">Set Location</string>
    <string name="editRouteActivity_back_button_text">Route</string>
    <string name="editRouteActivity_edit">Edit Route</string>
    <string name="editRouteActivity_name">Name</string>
    <string name="editRouteActivity_hint_descript">Description</string>
    <string name="editRouteActivity_distance">Distance</string>
    <string name="editRouteActivity_startAddress">Start address</string>
    <string name="editRouteActivity_endAddress">End address</string>
    <string name="editRouteActivity_datetime">Date</string>
    <string name="blankFragment_text">Loading</string>
    <string name="editRouteActivity_duration">Duration</string>
    <string name="chat">Chat</string>
    <string name="message">Message...</string>
    <string name="locationHomeFragment_mainActivity_text">There\'s no posts on your location</string>
    <string name="FollowingHomeFragment_mainActivity_text">There\'s no posts of the people your following</string>
</resources>