<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITIES.EventDetailsActivity">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:gravity="center_vertical">
                    <ImageButton
                        android:id="@+id/carDetailsActivity_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/baseline_arrow_back_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eventDetailsActivity_back_button_text"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/event"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="end"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eventDetailsActivity_editButton"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="@string/edit_event"
                        android:textColor="@color/orange"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="10dp">
                    <ImageView
                        android:id="@+id/eventDetailsActivity_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_image_24"/>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventDetailsActivity_layoutNameTextField"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    android:layout_width="match_parent"
                    app:boxStrokeColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/addEventActivity_hint_name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_NameTextField"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/eventDetailsActivity_layoutAddressTextField"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    android:layout_width="match_parent"
                    app:boxStrokeColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/address">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_AddressTextField"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clubDetailsActivity_back_button_text"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_club"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/baseline_calendar_month_24"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_startdate"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="custom"
                    android:hint="@string/route_start_date"
                    app:endIconDrawable="@drawable/baseline_calendar_month_24"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_routestartdate"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date"
                    app:endIconDrawable="@drawable/baseline_calendar_month_24"
                    app:endIconMode="custom"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_enddate"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carDetailsActivity_hint_descript"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_descript"
                        android:lines="5"
                        android:maxLines="10"
                        android:gravity="start"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/eventDetailsActivity_state"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <fragment
                    android:id="@+id/mapFragment_eventsDetails_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintVertical_bias="0.5" />

            </LinearLayout>
            </ScrollView>

        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>