<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITIES.EditMemberActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:gravity="center_vertical">
                    <ImageButton
                        android:id="@+id/editMemberActivity_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/baseline_arrow_back_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editMemberActivity_back_button_text"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/editMemberActivity_back_button_text"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="end"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editMemberActivity_saveButton"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="@string/editMemberActivity_edit"
                        android:textColor="@color/green"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:backgroundTint="@android:color/transparent"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="10dp">
                    <ImageView
                        android:id="@+id/editMemberActivity_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_image_24"/>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editMemberActivity_hint_memberName"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_memberName"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editMemberActivity_hint_name"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editMemberActivity_hint_email"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_email"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editMemberActivity_layoutGenderTextField"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    app:boxStrokeColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/editMemberActivity_hint_gender">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_GenderTextField"
                        android:inputType="none"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editMemberActivity_layoutLocationTextField"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    app:boxStrokeColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/editMemberActivity_hint_location">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_LocationTextField"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carDetailsActivity_hint_descript"
                    android:layout_marginBottom="10dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editMemberActivity_descript"
                        android:lines="5"
                        android:maxLines="10"
                        android:gravity="start"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>